--- a/inedx.html
+++ b/inedx.html
@@ -19,71 +19,83 @@
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
-<body>
+<body class="h-100">
     <section class="h-[20rem] bg-cover justify-center lg:h-[20rem]" style="background-image:url(images/Bitmap.svg)">
-        <div class="flex lg:gap-[20rem] gap-[15rem]  h-[10rem] justify-around ">
-            <h1 class=" text-[3rem] lg:text-[4rem] text-white pt-[2rem] pl-[10rem] lg:pl-[12rem]">TODO</h1>
-            <img src="images/lune.svg" alt="lune" class="w-[2rem] mr-[10rem]">
+        <div class="flex lg:gap-[15rem] gap-[15rem]  h-[10rem] justify-around ">
+            <h1 class=" text-[3rem] lg:text-[4rem] text-white pt-[2rem] pl-[13rem] lg:pl-[12rem]">TODO</h1>
+            <img src="images/lune.svg" alt="lune" class="w-[2rem] mr-[14rem]">
         </div>
-        <section class="flex-col w-[50rem] lg:w-[1rem] items-center justify-center ml-[20rem]">
+        <section class="flex-col lg:w-[50rem] w-[10rem] h-full lg:h-[35rem] items-center justify-center ml-[1rem] lg:ml-[20rem]">
             
-            <div class="w-[40rem] ">
-                <div class="flex w-[30rem] h-[4rem] block w-full px-4 py-3 rounded-[#2B1105] leading-tight text-gray-700 bg-white border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white focus:border-gray-500">
+            <div class="lg:w-[40rem]  w-[25rem]">
+                <div class="flex w-[30rem]  h-[4rem] block w-full  px-4 py-3 rounded-[#2B1105] leading-tight text-gray-700 bg-white border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white focus:border-gray-500">
                     <span class="material-symbols-outlined  pt-[0.5rem]">
                         radio_button_unchecked
                         </span>
-                  <input class="leading-tight text-[1.2rem] pl-[2rem] text-gray-700 bg-white   w-[35rem] h-[2rem]"  type="text" placeholder="Currently typing |">
+                  <input class="leading-tight text-[1.2rem] pl-[2rem] text-gray-700 bg-white   lg:w-[35rem] h-[2rem]"  type="text" placeholder="Currently typing |">
                 </div>
                 </div>
-                <div class="w-[40rem] pt-[3rem]">
+                <div class="lg:w-[40rem] w-[25rem] pt-[3rem]">
                     <div class="flex w-[30rem] h-[4rem] block w-full px-4 py-3 rounded-[#2B1105] leading-tight text-gray-700 bg-white border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white focus:border-gray-500">
                         <img src="images/yes.svg" alt="" class="w-[1.3rem]">
                       <input class="leading-tight text-[1.2rem] pl-[2rem] text-gray-700 bg-white   w-[35rem] h-[2rem]"  type="text" placeholder="Complete online JavaScript course">
                     </div>
                     </div>
-                    <div class="w-[40rem] gap-[1rem]">
+                    <div class="lg:w-[40rem] w-[25rem] gap-[1rem]">
                         <div class="flex w-[30rem] h-[4rem] block w-full px-4 py-3 rounded-[#2B1105] leading-tight text-gray-700 bg-white border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white focus:border-gray-500">
                             <img src="images/cercle.svg" alt="" class="w-[1.3rem]">
                           <input class="leading-tight text-[1.2rem] pl-[2rem] text-gray-700 bg-white   w-[35rem] h-[2rem]"  type="text" placeholder="Jog around the park 3x">
                           <img src="images/supprime.svg" alt="" class="w-[1.3rem]">
                         </div>
                         </div>
-                        <div class="w-[40rem]">
+                        <div class="lg:w-[40rem] w-[25rem]">
                             <div class="flex w-[30rem] h-[4rem] block w-full px-4 py-3 rounded-[#2B1105] leading-tight text-gray-700 bg-white border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white focus:border-gray-500">
                                 <img src="images/cercle.svg" alt="" class="w-[1.3rem]">
                               <input class="leading-tight text-[1.2rem] pl-[2rem] text-gray-700 bg-white   w-[35rem] h-[2rem]"  type="text" placeholder="10 minutes meditation">
+                              <img src="images/supprime.svg" alt="" class="w-[1.3rem]">
                             </div>
                             </div>
-                            <div class="w-[40rem] ">
+                            <div class="lg:w-[40rem] w-[25rem] ">
                                 <div class="flex w-[30rem] h-[4rem] block w-full px-4 py-3 rounded-[#2B1105] leading-tight text-gray-700 bg-white border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white focus:border-gray-500">
                                     <img src="images/cercle.svg" alt="" class="w-[1.3rem]">
                                   <input class="leading-tight text-[1.2rem] pl-[2rem] text-gray-700 bg-white   w-[35rem] h-[2rem]"  type="text" placeholder="Read for 1 hour">
+                                  <img src="images/supprime.svg" alt="" class="w-[1.3rem]">
                                 </div>
                                 </div>
-                                <div class="w-[40rem]">
+                                <div class="lg:w-[40rem] w-[25rem]">
                                     <div class="flex w-[30rem] h-[4rem] block w-full px-4 py-3 rounded-[#2B1105] leading-tight text-gray-700 bg-white border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white focus:border-gray-500">
                                         <img src="images/cercle.svg" alt="" class="w-[1.3rem]">
                                       <input class="leading-tight text-[1.2rem] pl-[2rem] text-gray-700 bg-white   w-[35rem] h-[2rem]"  type="text" placeholder="Pick up groceries">
+                                      <img src="images/supprime.svg" alt="" class="w-[1.3rem]">
                                     </div>
                                     </div>
-                                    <div class="w-[40rem]">
+                                    <div class="lg:w-[40rem] w-[25rem]">
                                         <div class="flex w-[30rem] h-[4rem] block w-full px-4 py-3 rounded-[#2B1105] leading-tight text-gray-700 bg-white border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white focus:border-gray-500">
                                             <img src="images/cercle.svg" alt="" class="w-[1.3rem]">
                                           <input class="leading-tight text-[1.2rem] pl-[2rem] text-gray-700 bg-white   w-[35rem] h-[2rem]"  type="text" placeholder="Complete Todo App on Frontend Mentor">
+                                          <img src="images/supprime.svg" alt="" class="w-[1.3rem]">
                                         </div>
                                         </div>
-                                        <div class="w-[40rem]">
-                                            <div class="flex w-[30rem] h-[4rem] block w-full px-4 py-3 rounded-[#2B1105] leading-tight text-gray-700 bg-white border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white focus:border-gray-500 gap-[3rem]">
+                                        <div class="lg:w-[40rem] w-[25rem] opacity-70">
+                                            <div class="flex w-[30rem] h-[4rem] block w-full px-4 py-3 justify-between rounded-[#2B1105] leading-tight text-gray-700 bg-white border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white focus:border-gray-500 gap-[3rem]">
                                                <h1>5 items left</h1>
-                                               <h1 class="text-blue-400">All</h1>
-                                               <h1>Active</h1>
-                                               <h1>Completed</h1>
+                                               <h1 class="text-blue-400 hidden lg:block">All</h1>
+                                               <h1 class="hidden lg:block">Active</h1>
+                                               <h1 class="hidden lg:block">Completed</h1>
                                                <h1>Clear Completed</h1>
                                             </div>
                                             </div>
+                                            <div class="lg:w-[40rem] w-[25rem] pt-[2rem]  block lg:hidden opacity-70">
+                                              <div class="flex w-[30rem] h-[4rem] block w-full justify-center px-4 py-3 rounded-[#2B1105] leading-tight text-gray-700 bg-white border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white focus:border-gray-500 gap-[3rem]">
+                                                 <h1 class="hidden ">5 items left</h1>
+                                                 <h1 class="text-blue-400">All</h1>
+                                                 <h1>Active</h1>
+                                                 <h1>Completed</h1>
+                                                 <h1 class="hidden">Clear Completed</h1>
+                                              </div>
+                                              </div>
         </section>
-        <h1 >Drag and drop to reorder list</h1>
-
     </section>
+    <h1 class="text-[1.2rem] pl-[4rem] pt-[30rem] lg:pt-[25rem] lg:pl-[25rem] opacity-70">Drag and drop to reorder list</h1>
 </body>
 </html>
